# pysem

./: .zenodo.json  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml  setup.cfg  setup.py
examples/: map.py
src/pysem/: __init__.py  glosses.py  main.py  sense.py
src/pysem/data/: embedding_fns.py
src/pysen/: data.py  glosses.py  map.py  sense.py
src/pysen/data/: sense.csv
tests/: test_glosses.py  test_sense.py
