[metadata]
name = pysem
version = 1.0
author = Johann-Mattis List
author_email = mattis.list@uni-passau.de
description = Python library for manipulating semantic data in linguistics
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
    linguistics
    Concepticon
    concept mapping
    semantic data
license = MIT
license_files = LICENSE
url = https://pypi.org/project/pysem
platforms = any
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    clldutils>=3.5
    csvw
    attrs>=20
include_package_data = True

[options.extras_require]
dev = 
    build
    wheel
    twine
    tox
    pytest>=4.3
    pytest-cov
    coverage>=4.2    

[easy_install]
zip_ok = false


[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301,F405
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 3.1
testpaths = tests
addopts = --cov

[coverage:run]
source =
    linse
    tests

[coverage:report]
show_missing = true

