[easy_install]
zip_ok = false

[metadata]
description-file = README.md
license_file = LICENSE
name = pysem
version = 1.1
license = MIT
description= Python library for manipulating semantic data in linguistics'
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=
    Programming Language :: Python
    Programming Language :: Python :: 3
author = Johann-Mattis List
author_email = mattis.list@uni-passau.de
url = https://github.com/lingpy/pysem

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    clldutils>=3.5
    csvw
include_package_data = True

[options.extras_require]
dev =
    build
    wheel
    twine
    tox
test =
    pytest
    coverage
    pytest-cov


[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301,F405
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 3.1
testpaths = tests
addopts = --cov

[coverage:run]
source =
    pysem
    tests

[coverage:report]
show_missing = true

